Fix contact section overflow

--- a/src/index.css
+++ b/src/index.css
@@ -148,7 +148,7 @@
   }
 }
 
-html, body {
+/* html, body {
   max-width: 100%;
   overflow-x: hidden;
-}
+} */
